# vcl_fueltracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
vcl_fueltracker/: hooks.py  modules.txt
vcl_fueltracker/config/: desktop.py
vcl_fueltracker/doctype/fuel_tracker/: fuel_tracker.json  fuel_tracker.py
vcl_fueltracker/report/: __init__.py
vcl_fueltracker/report/fuel_analytics/: fuel_analytics.html  fuel_analytics.py
vcl_fueltracker/stock_control/doctype/ink_stock_count/: ink_stock_count.js
vcl_fueltracker/vcl_fuel_tracker/doctype/fuel_tracker/: fuel_tracker.json
vcl_stock_take/: hooks.py  modules.txt  patches.txt
vcl_stock_take/config/: desktop.py
vcl_stock_take/report/fuel_analytics/: __init__.py  fuel_analytics.js  fuel_analytics.json
vcl_stock_take/stock_control/doctype/ink_stock_count/: ink_stock_count.json  ink_stock_count.py
vcl_stock_take/stock_control/doctype/ink_stock_count_item/: ink_stock_count_item.json  ink_stock_count_item.py
vcl_stock_take/vcl_stock_take/doctype/fuel_tracker/: fuel_tracker.js  fuel_tracker.json
