[project]
name = "vcl_stock_take"
version = "0.0.1"
description = "Stock Take Custom App for Vimit Converters Limited"
authors = [
    {name = "Vimit Converters Limited"}
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project.entry-points."frappe"]
vcl_stock_take = "vcl_stock_take"
